[gd_scene load_steps=9 format=3 uid="uid://jpb8mapjhren"]

[ext_resource type="Texture2D" uid="uid://dujl62a6ca3oy" path="res://Assets/player.png" id="1_50fqf"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_fnjhb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i6x7n"]
atlas = ExtResource("1_50fqf")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aah05"]
atlas = ExtResource("1_50fqf")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8nic"]
atlas = ExtResource("1_50fqf")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_orgyo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6x7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aah05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8nic")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wtfua"]
radius = 6.0
height = 28.0

[sub_resource type="Curve2D" id="Curve2D_rkefu"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -400, -232, 0, 0, 0, 0, 400, -232, 0, 0, 0, 0, 400, 232, 0, 0, 0, 0, -400, 232, 0, 0, 0, 0, -400, -232)
}
point_count = 5

[node name="Player" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_fnjhb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_orgyo")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_wtfua")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_wtfua")

[node name="DamageCooldown" type="Timer" parent="."]
one_shot = true

[node name="FlashCooldown" type="Timer" parent="."]
wait_time = 0.1

[node name="EnemySpawnCooldown" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)

[node name="EnemySpawnPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_rkefu")

[node name="PathFollow2D" type="PathFollow2D" parent="EnemySpawnPath"]
position = Vector2(-400, -232)

[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="Area2D" to="." method="_on_area_2d_area_shape_exited"]
[connection signal="timeout" from="FlashCooldown" to="." method="_on_flash_cooldown_timeout"]
[connection signal="timeout" from="EnemySpawnCooldown" to="." method="spawn_enemy"]
